# security-agent

./: .env.example  .gitignore  Acunetix-API-Documentation.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
src/: __init__.py  cli.py
src/agent/: __init__.py  engine.py  llm_factory.py  memory.py  prompts.py  schemas.py  skills.py  spec_parser.py
src/core/: __init__.py  config.py  database.py  models.py
src/reporting/: __init__.py  markdown.py  pdf.py
src/scanner/: __init__.py  findings_parser.py  installer.py  output_filter.py  updater.py  wordlists.py
src/security/: __init__.py  safety.py  sandbox.py
src/skills_data/exploit/: commix.md  custom_exploit.md  metasploit.md  searchsploit.md  sqlmap.md
src/skills_data/modes/: deep.md  normal.md  quick.md
src/skills_data/recon/: amass.md  dnsx.md  httpx.md  katana.md  naabu.md  subfinder.md  theharvester.md  wafw00f.md  whatweb.md
src/skills_data/scanner/: acunetix.md  auth_bruteforce.md  cloud_misconfig.md  cors_check.md  corscanner.md  crlfuzz.md  dalfox.md  ffuf.md  git_leak.md  gobuster.md  info_disclosure.md  jwt_analysis.md  nikto.md  nuclei.md  sensitive_files.md  ssrf_ssti.md  testssl.md  zap.md
src/tools/: __init__.py
src/tools/exploit/: __init__.py  commix.py  custom_exploit.py  metasploit.py  searchsploit.py  sqlmap.py
src/tools/recon/: __init__.py  amass.py  dnsx.py  httpx_tool.py  katana.py  naabu.py  subfinder.py  theharvester.py  wafw00f.py  whatweb.py
src/tools/scanner/: __init__.py  acunetix.py  corscanner.py  crlfuzz.py  dalfox.py  email_security.py  ffuf.py  gobuster.py  nikto.py  nuclei.py  secret_scanner.py  testssl.py  zap.py
src/ui/: __init__.py  console.py
tests/: test_security_hardening.py
