[project]
name = "security-agent-ai"
version = "1.1.0"
description = "AI-powered Security Agent for automated penetration testing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Security Agent Team"}]
keywords = ["security", "pentest", "ai", "agent", "vulnerability-scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    "langchain>=0.3.14,<0.4",
    "langchain-core>=0.3.29,<0.4",
    "langchain-community>=0.3.14,<0.4",
    "langchain-google-genai>=2.0.8,<3.0",
    "pydantic>=2.0.0,<3.0",
    "pydantic-settings>=2.0.0,<3.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.2.0,<1.0"]
anthropic = ["langchain-anthropic>=0.2.0,<1.0"]
all-llm = [
    "langchain-openai>=0.2.0,<1.0",
    "langchain-anthropic>=0.2.0,<1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
]

[project.scripts]
secagent = "src.cli:main"

[project.urls]
Homepage = "https://github.com/HadesNull123/security-agent"
Documentation = "https://github.com/HadesNull123/security-agent#readme"
Repository = "https://github.com/HadesNull123/security-agent"
Issues = "https://github.com/HadesNull123/security-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src/skills_data" = "src/skills_data"

[tool.hatch.build.targets.sdist]
include = ["src/", "main.py", "README.md", "LICENSE", ".env.example"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
